force-app/main/default/objects/CECInverter__c/CECInverter__c.object-meta.xml
<CustomObject>
    <label>CECInverter</label>
    <nameField>
        <label>CECInverter</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CECInverters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>