force-app/main/default/objects/CECInverter__c/fields/AC_DC_Coupling__c.field-meta.xml
<CustomField>
    <fullName>AC_DC_Coupling__c</fullName>
    <label>AC_DC_Coupling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>