force-app/main/default/objects/CECInverter__c/fields/AC_Equip_Type__c.field-meta.xml
<CustomField>
    <fullName>AC_Equip_Type__c</fullName>
    <label>AC_Equip_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>