force-app/main/default/objects/CECInverter__c/fields/APPROVAL_DATE__c.field-meta.xml
<CustomField>
    <fullName>APPROVAL_DATE__c</fullName>
    <label>APPROVAL_DATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>