force-app/main/default/objects/CECInverter__c/fields/CEC_APPROVED_DATE__c.field-meta.xml
<CustomField>
    <fullName>CEC_APPROVED_DATE__c</fullName>
    <label>CEC_APPROVED_DATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>