force-app/main/default/objects/CECInverter__c/fields/CEC_ID__c.field-meta.xml
<CustomField>
    <fullName>CEC_ID__c</fullName>
    <label>CEC_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>