force-app/main/default/objects/CECInverter__c/fields/CERT_ID__c.field-meta.xml
<CustomField>
    <fullName>CERT_ID__c</fullName>
    <label>CERT_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>