force-app/main/default/objects/CECInverter__c/fields/CERT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>CERT_NUMBER__c</fullName>
    <label>CERT_NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>