force-app/main/default/objects/CECInverter__c/fields/EAI_Ref__c.field-meta.xml
<CustomField>
    <fullName>EAI_Ref__c</fullName>
    <label>EAI_Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>