force-app/main/default/objects/CECInverter__c/fields/EXPIRY_DATE__c.field-meta.xml
<CustomField>
    <fullName>EXPIRY_DATE__c</fullName>
    <label>EXPIRY_DATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>