force-app/main/default/objects/CECInverter__c/fields/INVERTER_ID__c.field-meta.xml
<CustomField>
    <fullName>INVERTER_ID__c</fullName>
    <label>INVERTER_ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>