force-app/main/default/objects/CECInverter__c/fields/INVERTER_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>INVERTER_NUMBER__c</fullName>
    <label>INVERTER_NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>