force-app/main/default/objects/CECInverter__c/fields/Inverter_Type__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Type__c</fullName>
    <label>Inverter_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>