force-app/main/default/objects/CECInverter__c/fields/InverterCapacity__c.field-meta.xml
<CustomField>
    <fullName>InverterCapacity__c</fullName>
    <label>InverterCapacity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>