force-app/main/default/objects/CECInverter__c/fields/InverterMfr__c.field-meta.xml
<CustomField>
    <fullName>InverterMfr__c</fullName>
    <label>InverterMfr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>