force-app/main/default/objects/CECInverter__c/fields/InverterModel__c.field-meta.xml
<CustomField>
    <fullName>InverterModel__c</fullName>
    <label>InverterModel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>