force-app/main/default/objects/CECInverter__c/fields/IS_BATTERY__c.field-meta.xml
<CustomField>
    <fullName>IS_BATTERY__c</fullName>
    <label>IS_BATTERY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>