force-app/main/default/objects/CECInverter__c/fields/IS_DISABLED__c.field-meta.xml
<CustomField>
    <fullName>IS_DISABLED__c</fullName>
    <label>IS_DISABLED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>