force-app/main/default/objects/CECInverter__c/fields/IS_SOLAR__c.field-meta.xml
<CustomField>
    <fullName>IS_SOLAR__c</fullName>
    <label>IS_SOLAR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>