force-app/main/default/objects/CECInverter__c/fields/NOMINAL_AC_POWER__c.field-meta.xml
<CustomField>
    <fullName>NOMINAL_AC_POWER__c</fullName>
    <label>NOMINAL_AC_POWER</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>