force-app/main/default/objects/CECInverter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>INVERTER_NUMBER__c</columns>
    <columns>InverterMfr__c</columns>
    <columns>InverterModel__c</columns>
    <columns>Phase__c</columns>
    <columns>IS_SOLAR__c</columns>
    <columns>IS_BATTERY__c</columns>
    <columns>INVERTER_ID__c</columns>
    <columns>CEC_ID__c</columns>
    <columns>NOMINAL_AC_POWER__c</columns>
    <columns>CERT_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>