force-app/main/default/objects/CECInverter__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>InverterMfr__c</columns>
    <columns>InverterModel__c</columns>
    <columns>InverterCapacity__c</columns>
    <columns>Phase__c</columns>
    <columns>SID__c</columns>
    <columns>CEC_ID__c</columns>
    <columns>AC_Equip_Type__c</columns>
    <columns>Inverter_Type__c</columns>
    <columns>IS_SOLAR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>